k8s/yaml/busybox-mount.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - port: 80
  selector:
    app: nginx
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
#  namespace: test
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: hosts-volume
        configMap:
          name: db-hosts

      containers:
      - name: nginx
        image: nginx:1.12.1
        ports:
        - containerPort: 80

        volumeMounts:
        - name: hosts-volume
          mountPath: /mnt/hosts.append
      restartPolicy: Always
